@@ -1,3 +1,13 @@
+2019-05-17  Florian Weimer  <fweimer@redhat.com>
+
+	* resolv/nss_dns/dns-host.c (gethostbyname3_context): Do not
+	perform IPv6 lookup.  Adjust getanswer_r call.
+	(_nss_dns_gethostbyname_r): Do not request IPv4 address mapping
+	from gethostbyname3_context.
+	(_nss_dns_gethostbyaddr2_r): Adjust getanswer_r call.
+	(getanswer_r): Remove map argument.  Do not perform address
+	mapping.
+
 2019-05-16  Florian Weimer  <fweimer@redhat.com>
 
 	* resolv/nss_dns/dns-host.c (getanswer_r): Be more explicit about
